# mbed-os_unwr_target

./: README.md  custom_targets.json
TARGET_UNWIRED_RANGE/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_UNWIRED_RANGE/device/TOOLCHAIN_ARM_MICRO/: stm32l151rc.sct
